Inseri o favicon e fiz uns testes de logo no index.html e main.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! :D">
+    <meta name="description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! Este é meu portfólio e meu currículo, um jeito simples de me conhecer. :D">
     <meta name="keywords" content="HTML,CSS,JavaScript, Front-End, Genor, Chiomento, Design, Web, Freelance">
     <meta name="author" content="Genor Chiomento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,17 +13,45 @@
     <link rel="stylesheet" href="assets/components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/main.css">
-    <title>Genor Chiomento</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Bitter|Bungee" rel="stylesheet">
+    <title>Genor Chiomento - Desenvolvedor Front-End</title>
+
+    <!-- favicons -->
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/images/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/images/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/images/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="assets/images/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/images/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    <h1 class="text-center">Em manutenção!</h1>
+    <header>
+        <h1 class="logo">Logo</h1>
+    </header>
 
-    <h4 class="text-center">Genor Chiomento</h>
+    <main>
+        <h1>Teste</h1>
+    </main>
 
+    <footer>
+
+    </footer>
     <!-- importando os scripts e components JS -->
     <script src="assets/components/jquery/dist/jquery.min.js"></script>
     <script src="assets/components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/scripts/main.js"></script>
-    
+
 </body>
 </html>
