--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Logo</h1>
+        <nav class="">
+            <ul class="nav nav-pills">
+                <li class="logo"><a href="/">Logo</a></li>
+                <li role="presentation" class=""><a href="#">link</a></li>
+                <li role="presentation" class=""><a href="#">link</a></li>
+                <li role="presentation" class="disabled"><a href="#">Disabled link</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <h1>Teste</h1>
+        <h1 class="logo">Teste</h1>
     </main>
 
     <footer>
