Configuraçõesp para não importar os componentes e só usar o bower para baixar e atualizar eles.

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 </head>
 <body>
     <header>
-        <nav class="">
+        <!-- <nav class="">
             <ul class="nav nav-pills">
                 <li class="logo"><a href="/">Logo</a></li>
                 <li role="presentation" class=""><a href="#">link</a></li>
                 <li role="presentation" class=""><a href="#">link</a></li>
                 <li role="presentation" class="disabled"><a href="#">Disabled link</a></li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
     <main>
-        <h1 class="logo">Teste</h1>
+        <h1 class="logo text-center">Em manutenção!</h1>
     </main>
 
     <footer>
