--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- importando os styles e components CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/components/normalize.css">
     <link rel="stylesheet" href="assets/components/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/main.css">
@@ -57,13 +58,13 @@
                 <div class="col-md-12 social_media">
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link github" href="#">GitHub</a>
+                            <a class="nav-link fab fa-github-square fa-3x" href="https://github.com/genorchiomento" target="_blank" title="GitHub"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Linkedin</a>
+                            <a class="nav-link fab fa-linkedin fa-3x" href="https://www.linkedin.com/in/genorchiomento/" target="_blank" title="Linkedin"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Facebook</a>
+                            <a class="nav-link fab fa-facebook-square fa-3x" href="https://www.facebook.com/imgenorchiomento" target="_blank" title="Facebook"></a>
                         </li>
                     </ul>
                 </div>
