--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Genor Chiomento - Desenvolvedor Front-End</title>
     <meta name="description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! Este é meu portfólio e meu currículo, um jeito simples de me conhecer. :D">
+    <meta name="google-site-verification" content="8kDtWUmUQEh7QXoj_shRaxcgYAVpHs_YQ7TeniN0kmI">
     <meta name="keywords" content="HTML,CSS,JavaScript, Front-End, Genor, Chiomento, Design, Web, Freelance">
     <meta name="author" content="Genor Chiomento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@genorchiomento">
+    <meta name="twitter:title" content="Genor Chiomento - Desenvolvedor Front-End">
+    <meta name="twitter:description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! Este é meu portfólio e meu currículo, um jeito simples de me conhecer. :D">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87580137-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-87580137-1');
+    </script>
+
 
     <!-- importando os styles e components CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="assets/components/normalize.css">
     <link rel="stylesheet" href="assets/components/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/styles/main.css">
 
     <link href="https://fonts.googleapis.com/css?family=Bitter|Bungee" rel="stylesheet">
-    <title>Genor Chiomento - Desenvolvedor Front-End</title>
 
     <!-- favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicon/apple-icon-57x57.png">
@@ -79,4 +99,5 @@
     <script src="assets/components/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/scripts/main.js"></script>
 </body>
+
 </html>
