--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Genor Chiomento - Desenvolvedor Front-End</title>
+    <title>Genor Chiomento - Desenvolvedor</title>
     <meta name="description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! Este é meu portfólio e meu currículo, um jeito simples de me conhecer. :D">
     <meta name="google-site-verification" content="8kDtWUmUQEh7QXoj_shRaxcgYAVpHs_YQ7TeniN0kmI">
-    <meta name="keywords" content="HTML,CSS,JavaScript, Front-End, Genor, Chiomento, Design, Web, Freelance">
+    <meta name="keywords" content="Genor, Chiomento, Design, Web, Freelance, Android, Developer, Layout, Tecnologia, Love">
     <meta name="author" content="Genor Chiomento">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genorchiomento">
-    <meta name="twitter:title" content="Genor Chiomento - Desenvolvedor Front-End">
+    <meta name="twitter:title" content="Genor Chiomento - Desenvolvedor">
     <meta name="twitter:description" content="Um nerd apaixonado por filmes, jogos e desenvolvimento! Este é meu portfólio e meu currículo, um jeito simples de me conhecer. :D">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -66,7 +66,7 @@
                     <img class="photo_profile img-fluid" src="assets/images/profile-genor-chiomento-developer-web-front-end-marketing-ti-analista-infra.jpg"
                         alt="Foto do Genor Chiomento, com as mãos no bolso, camisa xadrez, calça jeans e óculos.">
                     <h1 class="title_name">Genor Chiomento</h1>
-                    <h4 class="title_job">Front-End Developer</h4>
+                    <h4 class="title_job">Developer</h4>
                 </div>
             </div>
         </div>
