--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <ul>
       <li>
-        <a href="https://github.com/genorchiomento">Ver meu portfólio</a>
+        <a href="https://github.com/genorchiomento">Veja meu portfólio</a>
       </li>
 
       <li>
