--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="container">
     <div id="profile">
-      <img src="./assets/avatar.png" alt="Foto de Genor Chiomento, usando óculos e camisa preta e fundo embaçado." />
+      <img src="./assets/avatar.png" alt="Picture of Genor Chiomento, wearing glasses and a black shirt with a blurred background." />
       <p>We were created to create!</p>
     </div>
 
@@ -27,11 +27,11 @@
 
     <ul>
       <li>
-        <a href="https://github.com/genorchiomento">Veja meu portfólio</a>
+        <a href="https://github.com/genorchiomento">See my portfolio</a>
       </li>
 
       <li>
-        <a href="https://www.linkedin.com/in/genorchiomento/" target="_blank">Fale comigo no Linkedin</a>
+        <a href="https://www.linkedin.com/in/genorchiomento/" target="_blank">Contact me on LinkedIn</a>
       </li>
     </ul>
     <div id="social-links">
